fix title and title icon alignment

--- a/slothagami-web/src/components/Icon/Icon.css
+++ b/slothagami-web/src/components/Icon/Icon.css
@@ -5,6 +5,6 @@
 }
 
 .icon {
-    min-width: 1.2em;
+    max-width: 1.2em;
     height: 1.2em;
 }
